# rpoint

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: rdistance.h  rdistance.hpp  rexpression.hpp  roperators.hpp  rpoint.h  rpoint.hpp  rpointvector.h  rpointvector.hpp
tests/: test_point.cpp  test_rdistance.cpp  test_rpoint.cpp  test_rpointvector.cpp
